    description since pgdocs is only available for 7.4. (see bug #405097)
  * debian/patches/04-timezone-symlinks.patch:
    - Use the timezone database from the system tzdata instead of shipping our
      own. Towards a single authoritative time zone database in Debian and
      Ubuntu... :) (LP: #41159)
    - Drop previous hardlink-to-symlink patch to zic, since that is irrelevant
      now.

 -- Martin Pitt <mpitt@debian.org>  Fri, 30 Mar 2007 18:53:14 +0200

postgresql-8.2 (8.2.3-1) experimental; urgency=low

  * New upstream bug fix release to fix regressions in 8.2.2:
    - Remove overly-restrictive check for type length in constraints and
      functional indexes.
    - Fix optimization so MIN/MAX in subqueries can again use indexes.

 -- Martin Pitt <mpitt@debian.org>  Thu,  8 Feb 2007 17:13:08 +0100

postgresql-8.2 (8.2.2-1) experimental; urgency=low

  * New upstream security and bug fix release:
    - Fix security vulnerabilities that allowed connected users to
      read backend memory.
      The vulnerabilities involve suppressing the normal check that a SQL
      function returns the data type it's declared to, and changing the
      data type of a table column (CVE-2007-0555, CVE-2007-0556). These
      errors can easily be exploited to cause a backend crash, and in
      principle might be used to read database content that the user
      should not be able to access.
    - Fix not-so-rare-anymore bug wherein btree index page splits could
      fail due to choosing an infeasible split point.
    - Properly handle to_char('CC') for years ending in 00.
      Year 2000 is in the twentieth century, not the twenty-first.
    - "/contrib/tsearch2" localization improvements.
    - Fix incorrect permission check in information_schema.key_column_usage
      view.
      The symptom is "relation with OID nnnnn does not exist" errors. To
      get this fix without using "initdb", use "CREATE OR REPLACE VIEW"
      to install the corrected definition found in