@@ -11,8 +11,11 @@ postgresql-8.2 (8.2.3-2) UNRELEASED; urgency=low
       Ubuntu... :) (LP: #41159)
     - Drop previous hardlink-to-symlink patch to zic, since that is irrelevant
       now.
+  * Add debian/patches/12-vacuum-cycle-hang.patch: Properly release our
+    semaphore lock before erroring out wit elog() to prevent deadlocks on
+    vacuum errors. Thanks to Heikki Linnakangas!
 
- -- Martin Pitt <mpitt@debian.org>  Fri, 30 Mar 2007 18:53:14 +0200
+ -- Martin Pitt <mpitt@debian.org>  Fri, 30 Mar 2007 18:56:35 +0200
 
 postgresql-8.2 (8.2.3-1) experimental; urgency=low
 
